Change pages description

--- a/classIndex/index.html
+++ b/classIndex/index.html
@@ -8,7 +8,7 @@
         <!-- In the 'head' tag goes everything that is important to the browser to build the web app but isn't visible to the final user -->
         <meta charset="UTF-8">
         <!-- Tell the browser to understand special characters, such as 'ñ', accents or emojis -->
-        <meta name="description" content="This page shows pictures of kittens">
+        <meta name="description" content="This page shows an example of HTML">
         <!-- It is used for SEO, to help search engines find our website -->
         <meta name="robots" content="index,follow">
         <!-- Authorizing search engine robots to help position our site -->
