--- a/classVideos/index.html
+++ b/classVideos/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This page contains a shopping list">
+    <meta name="description" content="This page contains a landscape video">
     <meta name="robots" content="index,follow">
     <title>Video Tag</title>
 </head>
