--- a/shoppingListProject/shopping-list.html
+++ b/shoppingListProject/shopping-list.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This page contains a shopping list">
     <meta name="robots" content="index,follow">
+    <link rel="stylesheet" href="./style.css">
     <title>My shopping list</title>
 </head>
 <body>
