--- a/css/classPosition/flexbox-challenge.html
+++ b/css/classPosition/flexbox-challenge.html
@@ -13,30 +13,35 @@
   <body>
     <main>
       <header>
-        <h1>1st Gen Pokemons</h1>
+        <h1>1st Gen Pokémon</h1>
       </header>
       <section class="pokemon-list">
         <div class="pokemon">
-          <div class="pokemon__id">
-            <div class="pokemon__title">
+          <div class="pokemon__container pokemon__container_main">
+            <div class="pokemon__title pokemon__attribute_background_white">
               <h2> Bulbasaur</h2>
               <h2>フシギバナ</h2>
               <h2>Seed Pokémon</h2>
               <h2>Fushigibana</h2>
             </div>
-            <div class="pokemon__number">
+            <div class="pokemon__number pokemon__attribute_background_white">
               <h2> #001 </h2>
             </div>
+            <figure class="pokemon__picture">
+              <img src="https://cdn.bulbagarden.net/upload/thumb/2/21/001Bulbasaur.png/250px-001Bulbasaur.png" alt="colored drawing of Bulbasaur">
+            </figure> 
           </div>
-          <figure class="pokemon__picture">
-            <img src="https://cdn.bulbagarden.net/upload/thumb/2/21/001Bulbasaur.png/250px-001Bulbasaur.png" alt="colored drawing of Bulbasaur">
-          </figure>          
+          <div class="pokemon__container pokemon__container_secondary">
+            <div class="pokemon__title">
+              <h2 class="pokemon__title_secondary">Type</h2>
+              <div class="pokemon__attribute pokemon__attribute_type pokemon__attribute_background_white">
+                <p class="pokemon__attribute pokemon__attribute_type_grass">Grass</p>
+                <p class="pokemon__attribute pokemon__attribute_type_poison">Poison</p>
+              </div>
+              
+            </div>
+          </div>
           <ul class="pokemon__attributes">
-            <li>
-              Type:
-              <span class="pokemon__type pokemon__type_grass">Grass</span>
-              <span class="pokemon__type pokemon__type_poison">Poison</span>
-            </li>
             <li>Abilities Overgrow, Chlorophyll (HA)</li>
             <li>Catch rate: 11.9%</li>
             <li>Height: 0.7m</li>
