Order folders by class number

--- a/css/9classPosition/flexbox-challenge.html
+++ b/css/9classPosition/flexbox-challenge.html
@@ -21,8 +21,8 @@
             <div class="pokemon__title pokemon__attribute_background_white">
               <h2> Bulbasaur</h2>
               <h2>フシギバナ</h2>
-              <h2>Seed Pokémon</h2>
-              <h2>Fushigibana</h2>
+              <h3>Seed Pokémon</h3>
+              <h3>Fushigidane</h3>
             </div>
             <div class="pokemon__number pokemon__attribute_background_white">
               <h2> #001 </h2>
@@ -38,7 +38,6 @@
                 <p class="pokemon__attribute pokemon__attribute_type_grass">Grass</p>
                 <p class="pokemon__attribute pokemon__attribute_type_poison">Poison</p>
               </div>
-              
             </div>
           </div>
           <ul class="pokemon__attributes">
