Adapt the cards for medium and large viewports

--- a/css/9classPosition/flexbox-challenge.html
+++ b/css/9classPosition/flexbox-challenge.html
@@ -20,10 +20,14 @@
         <div class="pokemon pokemon_background_green pokemon_border_purple">
           <div class="pokemon__container pokemon__container_main pokemon__container_background_green">
             <div class="pokemon__title pokemon__attribute_background_white">
-              <h2> Bulbasaur</h2>
-              <h2>フシギバナ</h2>
-              <h3>Seed Pokémon</h3>
-              <h3>Fushigidane</h3>
+              <div class="pokemon__title pokemon__title_block">
+                <h2> Bulbasaur</h2>
+                <h3>Seed Pokémon</h3>
+              </div>
+              <div class="pokemon__title pokemon__title_block">
+                <h2>フシギバナ</h2>
+                <h3>Fushigidane</h3>
+              </div>
             </div>
             <div class="pokemon__number pokemon__attribute_background_white">
               <h2> #001 </h2>
@@ -80,10 +84,14 @@
         <div class="pokemon pokemon_background_blue pokemon_border_blue">
           <div class="pokemon__container pokemon__container_main pokemon__container_background_blue">
             <div class="pokemon__title pokemon__attribute_background_white">
-              <h2>Squirtle</h2>
-              <h2>ゼニガメ</h2>
-              <h3>Tiny Turtle Pokémon</h3>
-              <h3>Zenigame</h3>
+              <div class="pokemon__title pokemon__title_block pokemon__title_block_long">
+                <h2>Squirtle</h2>
+                <h3>Tiny Turtle Pokémon</h3>
+              </div>
+              <div class="pokemon__title pokemon__title_block">
+                <h2>ゼニガメ</h2>
+                <h3>Zenigame</h3>
+              </div>
             </div>
             <div class="pokemon__number pokemon__attribute_background_white">
               <h2> #007 </h2>
@@ -139,10 +147,14 @@
         <div class="pokemon pokemon_background_orange pokemon_border_blue-magenta">
           <div class="pokemon__container pokemon__container_main pokemon__container_background_orange">
             <div class="pokemon__title pokemon__attribute_background_white">
-              <h2>Charizard</h2>
-              <h2>リザードン</h2>
-              <h3>Flame Pokémon</h3>
-              <h3>Lizardon</h3>
+              <div class="pokemon__title pokemon__title_block">
+                <h2>Charizard</h2>
+                <h3>Flame Pokémon</h3>
+              </div>
+              <div class="pokemon__title pokemon__title_block">
+                <h2>リザードン</h2>
+                <h3>Lizardon</h3>
+              </div>
             </div>
             <div class="pokemon__number pokemon__attribute_background_white">
               <h2> #006 </h2>
@@ -199,10 +211,14 @@
         <div class="pokemon pokemon_background_yellow pokemon_border_gold">
           <div class="pokemon__container pokemon__container_main pokemon__container_background_yellow">
             <div class="pokemon__title pokemon__attribute_background_white">
-              <h2>Pikachu</h2>
-              <h2>ピカチュウ</h2>
-              <h3>Mouse Pokémon</h3>
-              <h3>Pikachu</h3>
+              <div class="pokemon__title pokemon__title_block">
+                <h2>Pikachu</h2>
+                <h3>Mouse Pokémon</h3>
+              </div>
+              <div class="pokemon__title pokemon__title_block">
+                <h2>ピカチュウ</h2>
+                <h3>Pikachu</h3>
+              </div>
             </div>
             <div class="pokemon__number pokemon__attribute_background_white">
               <h2> #025 </h2>
