Make mobile version

--- a/responsiveDesign/layoutShifter/layout-shifter-challenge.html
+++ b/responsiveDesign/layoutShifter/layout-shifter-challenge.html
@@ -24,24 +24,53 @@
   </head>
   <body>
     <header class="header">
-      <h1>Solo Leveling</h1>
+      <h1>Top Readings</h1>
       <nav class="main-menu">
         <ul>
-          <li>Home</li>
-          <li>Classes</li>
-          <li>Skills</li>
-          <li>Characters</li>
-          <li>More</li>
+          <a href="#"><li class="button">New</li></a>
+          <a href="#"><li class="button">Genres</li></a>
+          <a href="#"><li class="button">Characters</li></a>
         </ul>
       </nav>
     </header>
     <main class="container">
-      <div class="c1"></div>
-      <div class="c4">
-        <div class="c2"></div>
-        <div class="c3"></div>
-      </div>
-      <div class="c5"></div>
+      <section class="top-readings">
+        <div
+          class="hero hero--featured hero__background hero__background--solo-leveling"
+        >
+          <h2>Solo Leveling <span class="author-name"> by Chu-Gong</span></h2>
+          <h3>
+            Changing from the weakest Hunter to the strongest S-rank Hunter!
+          </h3>
+          <a href="#">
+            <button class="button">Read More</button>
+          </a>
+        </div>
+        <div class="hero hero__background hero__background--goh">
+          <h2>
+            The God of High School
+            <span class="author-name"> by Yongje Park</span>
+          </h2>
+          <h3>
+            A fierce competition held between Korean high school students to
+            determine the best fighter among them
+          </h3>
+          <a href="#">
+            <button class="button">Read More</button>
+          </a>
+        </div>
+        <div class="hero hero__background hero__background--lore-olympus">
+          <h2>
+            Lore Olympus <span class="author-name"> by Rachel Smythe</span>
+          </h2>
+          <h3>Witness what the gods do... after dark</h3>
+          <a href="#">
+            <button class="button">Read More</button>
+          </a>
+        </div>
+      </section>
+      <aside class="last-reviews"></aside>
+      <footer class="footer"></footer>
     </main>
     <footer class="footer"></footer>
   </body>
